.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Schedule_Alert_Recipient__c.object
<CustomObject>
    <fields>
        <fullName>provar__Person_Email__c</fullName>
        <formula>provar__Person__r.provar__Email__c</formula>
        <label>Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Person_Name__c</fullName>
        <formula>provar__Person__r.Name</formula>
        <label>Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Person__c</fullName>
        <label>Person</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Alert Recipients</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Alert_Recipients</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule__c</fullName>
        <label>Test Plan Schedule</label>
        <referenceTo>provar__Test_Plan_Schedule__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Alert Recipients</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Alert_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Plan Schedule Alert Recipient</label>
    <nameField>
        <displayFormat>TPSAR-{000000}</displayFormat>
        <label>Test Plan Schedule Alert Recipient Numbe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Schedule Alert Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>